<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="294dp"
        android:layout_height="287dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/btn"
        android:backgroundTint="@color/buttontext"
        android:fontFamily="@font/poppins"
        android:elevation="4dp"
        android:padding="16dp"
        android:text="@string/camera"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.226" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/btn2"
        android:fontFamily="@font/poppins"
        android:backgroundTint="@color/buttontext"
        android:elevation="4dp"
        android:padding="16dp"
        android:text="@string/gallery"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.226" />

    <Button
        android:id="@+id/btnAnalyze"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/btn3"
        android:backgroundTint="@color/bg2"
        android:fontFamily="@font/poppins"
        android:text="@string/know_your_batik"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.599" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frame_container"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_menu"
        android:background="@color/buttontext"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:itemIconSize="30dp"
        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"/>


</androidx.constraintlayout.widget.ConstraintLayout>